--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
     <div class="shield-pics">
       <img [src]="iconPic" height=145 width=500>
 
-    </div>    
+    </div>
     <div class="jumbotron-social">
       <ul class="ul-social">
         <li class="li-social-links">
@@ -59,17 +59,17 @@
       </div>
       <div class="content-body">
         <p>I am a software developer in Redmond, Washington. I originally moved here to work at Microsoft
-          after developing software in the Los Angeles Area. I then took a break to run a successful small 
-          business as a horse trainer. I decided I wanted to get back to programming so in 2016 I started 
-          taking online certification classes to renew my skills. I really enjoyed writing applications 
-          software when I was a programmer in LA so web development was what I gravitated towards. My goal 
+          after developing software in the Los Angeles Area. I then took a break to run a successful small
+          business as a horse trainer. I decided I wanted to get back to programming so in 2016 I started
+          taking online certification classes to renew my skills. I really enjoyed writing applications
+          software when I was a programmer in LA so web development was what I gravitated towards. My goal
           is to further my career as a full stack web developer.</p>
 
-        <p>Like most developers, I have volunteered my services - I helped improve and maintain the 
-          website for The WallingFord Senior Center, an organization that improves the lives of the 
-          elderly in the Seattle area. I am a physically active person and strive for achievement in 
+        <p>Like most developers, I have volunteered my services - I helped improve and maintain the
+          website for The WallingFord Senior Center, an organization that improves the lives of the
+          elderly in the Seattle area. I am a physically active person and strive for achievement in
           everything I do! I am a dressage rider (a form of horseback riding that strengthens and improves
-          the horse) who has ridden to the Olympic level, and I have qualified for and run the Boston  
+          the horse) who has ridden to the Olympic level, and I have qualified for and run the Boston
           Marathon. </p>
       <div>
     </div>
@@ -127,7 +127,7 @@
           <div class="card-content">
             <p>Developed and tested applications across mulitple MS-DOS, OS/2 and Windows platforms in primarily C and C++ programming languages.</p>
           </div>
-      </div>        
+      </div>
 
       <!-- CARD #5 -->
 
@@ -138,7 +138,7 @@
           <div class="card-content">
             <p>Managed multiple, concurrent projects for top-tier Southern California businesses; consistently met timelines and achieved all business objectives. Developed in languages including Access, Dbase, Pascal, Basic, and C.</p>
           </div>
-      </div>        
+      </div>
       </div>
     </div>
     <div class="side-content"></div>
@@ -202,28 +202,31 @@
         <!-- CARD #1 -->
         <div class="project-card">
           <div class="project-image">
-            <img [src]="flashCardImage" height=172 width=250>
+            <img src="./assets/flashcardscreen.jpg" height=172 width=250>
+            <img style="padding-top:15px;" src="./assets/flashcardscreen2.jpg" height=175 width=250>
           </div>
           <div class="project-content">
             <h4>Awesome Flashcards</h4>
-            <p>This is a full stack application featuring an Angular 4 frontend, a backend using NodeJs, 
+            <p>This is a full stack application featuring an Angular 4 frontend, a backend using NodeJs,
               Express, and Mongoose, and MongoDB as the database. The UI uses flex layout for the CSS and is
-              built with Webpack. It is deployed on the Google Cloud Platform. The database is hosted on MLab. 
-              The code is in a repository on github at https://github.com/TheWonderWomenUnite/flashcards. The 
-              concept, architecture, and UI design are all my own original work. The database and backend 
-              implementation. I cowrote the frontend with a partner as a project for Seattle Launch Code.</p>
+              built with Webpack. It is deployed on the Google Cloud Platform. The database is hosted on MLab.
+              The code is in a repository on github at https://github.com/TheWonderWomenUnite/flashcards. The
+              concept, architecture, and UI design are all my own original work. The database and backend
+              implementation. I cowrote the frontend with a partner as a project for Seattle Launch Code.
+              Due to the cost in maintaining the google cloud site, it does not run all the time but I can
+              deploy it on request. </p>
             <a href="https://calcium-doodad-185815.appspot.com">Awesome Flashcards</a>
           </div>
         </div>
         <!-- CARD #2 -->
         <div class="project-card">
           <div class="project-image">
-            <img src="http://placehold.it/250x350">
+            <img src="./assets/recipebookscreen.jpg">
           </div>
           <div class="project-content">
             <h4>Recipe Book</h4>
-            <p>This is a Web application which was implemented as a class project for "Angular (2+) 
-              The Complete Guide." It features an Angular 4 frontend which uses bootstrap for 
+            <p>This is a Web application which was implemented as a class project for "Angular (2+)
+              The Complete Guide." It features an Angular 4 frontend which uses bootstrap for
               styling, a custom authorization system, and firebase for persistent storage. It also utilizes
               webpack and is deployed to Amazon AWS. The code is in a repository on my github account.</p>
             <a href="http://lisa-copeland-recipebook.s3-website-us-west-2.amazonaws.com/">Recipe Book</a>
@@ -232,12 +235,16 @@
         <!-- CARD #3 -->
         <div class="project-card">
           <div class="project-image">
-            <img src="http://placehold.it/250x350">
+            <img src="./assets/tictactoe.png">
           </div>
           <div class="project-content">
-            <h4>Coming Soon</h4>
-            <p>Soon to be added.</p>
-            <a href="#">Link Text</a>
+            <h4>Tic Tac Toe</h4>
+            <p>This is a fully responsive application using Angular 5 with Material Elements and
+              flex layout for styling. It features the minimax recursive algorithm and keeps track of the
+              user's score against the computer. The code is in a repository on my github account and
+              is deployed on Azure Websites.
+            </p>
+            <a href="https://lisacopeland-tictactoe.azurewebsites.net/">Tic Tac Toe</a>
           </div>
         </div>
 
@@ -258,7 +265,7 @@
       <div class="content-body">
         <ul class="ul-skills">
           <li class="li-skills">Angular 2.0-5.0</li>
-          <li class="li-skills">Angular Material</li>          
+          <li class="li-skills">Angular Material</li>
           <li class="li-skills">Javascript</li>
           <li class="li-skills">MongoDB</li>
           <li class="li-skills">HTML</li>
@@ -290,17 +297,17 @@
       </div>
 
       <div class="contact content-body">
-        <p>Feel free to contact me at <a href="tel:+1-206-619-3815">206-619-3815</a>, send me an email
-           at lisacope@msn.com, or use the form below.</p>
-        <form [formGroup]="contactForm" (ngSubmit)="onSend()">
+        <p>I can be reached at <a href="tel:+1-206-619-3815">206-619-3815</a>, or send me an email
+           at lisacope@msn.com.</p>
+        <!-- <form [formGroup]="contactForm" (ngSubmit)="onSend()">
             <input type="email" name="email" formControlName="email" placeholder="Your email">
             <textarea name="message" formControlName="message" placeholder="Your message"></textarea>
             <button type="submit" [disabled]="!contactForm.valid">Send</button>
-        </form>
+        </form> -->
 
       </div> <!-- contact content-body -->
 
-    </div> <!-- main content --> 
+    </div> <!-- main content -->
     <div class="side-content"></div>
   </div> <!-- row blue -->
   <!-- END CONTACT -->
