adjust text sizes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,10 +19,8 @@
       <h1>Lisa Copeland</h1>
       <p>MEAN Stack Web Developer in Redmond, WA</p>
     </div>
-    <div class="shield-pics">
-      <img [src]="iconPic" height=145 width=500>
+    <img class="shield-pics" [src]="iconPic" height=291 width=900>
 
-    </div>
     <div class="jumbotron-social">
       <ul class="ul-social">
         <li class="li-social-links">
