--- a/src/styles.css
+++ b/src/styles.css
@@ -4,61 +4,74 @@ body {
     background: rgba(242, 242, 242, .6);
     margin: 0;
   }
-  
+
   * {
     box-sizing: border-box
   }
-  
-  /*NAVBAR*/
-  .navbar {
-    background-color: #31b0d5;
-    position: fixed; /* Set the navbar to fixed position */
-    top: 0; /* Position the navbar at the top of the page */
-    width: 100%; /* Full width */
-    display: flex;
-    justify-content: center;
-  }
-  
-  .navbar a {
-    font-weight: 200;
+
+/* Mobile Styles */
+@media only screen and (max-width: 400px) {
+
+  .jumbotron-text {
+    /*TAGLINE UNDER NAME*/
+    font-weight: 400;
+    font-size: 1em;
     color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  .navbar a:hover {
-    color: black;
+    text-align: center;
+    padding-top: 150px;
+    padding-bottom: 75px;
   }
 
-  .anchor {
-    display: block;
-    position: relative;
-    top: -70px;
-    visibility: hidden;
+  .jumbotron-text h1 {
+    /*YOUR NAME*/
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 1.5em;
+    margin-bottom: 0;
   }
-  
-  /*JUMBOTRON*/
-  .jumbotron {
-    height: 100vh; /*height to 100% of view height*/
-    background: #31b0d5; /*background color to blue*/
-    margin-bottom: 0; /*no bottom margin*/
-  
-    display: flex;
-    flex-direction: column;
+
+  .jumbotron-text p {
+    margin: 0;
   }
-  
+
   .jumbotron .lisa-pic {
-    position: absolute;
-    border-radius: 50%;
-    top: 40px;
-    left: 10px;
+    display: none;
   }
 
   .jumbotron .shield-pics {
-    display: flex;
-    justify-content: space-around;
-    padding-bottom: 50px;
+    display: none;
   }
+
+}
+
+/* Tablet Styles */
+@media only screen and (min-width: 401px) and (max-width: 960px) {
+
+  .jumbotron-text {
+    /*TAGLINE UNDER NAME*/
+    font-weight: 400;
+    font-size: 1.5em;
+    color: white;
+    text-align: center;
+    padding-top: 150px;
+    padding-bottom: 75px;
+  }
+
+  .jumbotron-text h1 {
+    /*YOUR NAME*/
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 2.5em;
+    margin-bottom: 0;
+  }
+
+  .jumbotron-text p {
+    margin: 0;
+  }
+}
+
+/* Desktop Styles */
+@media only screen and (min-width: 961px) {
 
   .jumbotron-text {
     /*TAGLINE UNDER NAME*/
@@ -69,7 +82,7 @@ body {
     padding-top: 150px;
     padding-bottom: 75px;
   }
-  
+
   .jumbotron-text h1 {
     /*YOUR NAME*/
     text-transform: uppercase;
@@ -77,33 +90,85 @@ body {
     font-size: 3em;
     margin-bottom: 0;
   }
-  
+
   .jumbotron-text p {
     margin: 0;
   }
-  
+}
+
+  /*NAVBAR*/
+  .navbar {
+    background-color: #31b0d5;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
+    display: flex;
+    justify-content: center;
+  }
+
+  .navbar a {
+    font-weight: 200;
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
+  .navbar a:hover {
+    color: black;
+  }
+
+  .anchor {
+    display: block;
+    position: relative;
+    top: -70px;
+    visibility: hidden;
+  }
+
+  /*JUMBOTRON*/
+  .jumbotron {
+    height: 100vh; /*height to 100% of view height*/
+    background: #31b0d5; /* background color to blue*/
+    margin-bottom: 0; /*no bottom margin*/
+
+    display: flex;
+    flex-direction: column;
+  }
+
+  .jumbotron .lisa-pic {
+    position: absolute;
+    border-radius: 50%;
+    top: 40px;
+    left: 10px;
+  }
+
+  .jumbotron .shield-pics {
+    display: flex;
+    margin: auto;
+    padding-bottom: 50px;
+  }
+
   /*SOCIAL LINKS*/
 
   .jumbotron-social {
-    align-self: center; 
+    align-self: center;
   }
 
   .ul-social {
     text-align: center;
     padding-left: 0;
   }
-  
+
   .li-social-links {
     display: inline-block;
     list-style: none;
   }
-  
+
   .social {
     font-size: 2em;
     color: white;
     padding: 20px;
   }
-  
+
   /*ARROW LINK*/
   #down-arrow {
     /*position: absolute;
@@ -112,52 +177,52 @@ body {
     text-align: center;
     margin-bottom: 50px;
   }
-  
+
   #down-arrow a {
     color: white;
   }
-  
+
   /*CONTENT*/
   .container {
     /*sets up flexbox*/
     display: flex;
     flex-direction: column;
   }
-  
+
   .row {
     display: flex;
   }
-  
+
   .white {
     background: white;
   }
-  
+
   .side-content {
     flex: 0 0 16.6%;
   }
-  
+
   .main-content {
     flex: 0 0 66.6%;
     margin-top: 2rem;
     margin-bottom: 3rem;
   }
-  
+
   .side-content-sm {
     flex: 0 0 10%;
   }
-  
+
   .main-content-lg {
     flex: 0 0 80%;
     margin-top: 2rem;
     margin-bottom: 3rem;
   }
-  
+
   .box-shadow {
     -webkit-box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.75);
   }
-  
+
   h2 {
     font-weight: 200;
     font-size: 2rem;
@@ -165,12 +230,12 @@ body {
     text-transform: uppercase;
     text-align: center;
   }
-  
+
   .content-body {
     line-height: 1.5;
     color: rgba(0,0,0,.75);
   }
-  
+
   /*EDUCATION*/
   .card {
     display: flex;
@@ -180,7 +245,7 @@ body {
     border-radius: .25rem;
     margin-bottom: 30px;
   }
-  
+
   .card-header {
     padding: .75rem 1.25rem;
     background-color: white;
@@ -188,22 +253,22 @@ body {
     border-top-left-radius: .25rem;
     border-top-right-radius: .25rem;
   }
-  
+
   .card-content {
     padding: .25rem 1.25rem;
     flex: 1 1 auto;
   }
-  
+
   h4 {
     margin: 0;
     font-weight: 400;
     color: grey;
   }
-  
+
   .job-title {
     float: right;
   }
-  
+
   /*PROJECTS*/
   .project-card {
     display: flex;
@@ -214,32 +279,32 @@ body {
     margin-bottom: 30px;
     box-shadow: 0 3px 6px rgba(0,0,0,0.08), 0 3px 6px rgba(0,0,0,0.15);
   }
-  
+
   .project-image {
     flex: 1 0 auto;
   }
-  
+
   .project-image img {
     display: block;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
   }
-  
+
   .project-content {
     flex: 1 1 auto;
     padding: 1.25rem;
-  
+
     display: flex;
     justify-content: center;
     flex-direction: column;
   }
-  
+
   /*SKILLS*/
   .ul-skills {
     text-align: center;
     padding-left: 0;
   }
-  
+
   .li-skills {
     display: inline-block;
     margin: 7px;
@@ -251,18 +316,18 @@ body {
     font-size: 1.1em;
     border-radius: 25px;
   }
-  
+
   /*CONTACT*/
   .blue {
     background: #3498db;
     text-align: center;
   }
-  
+
   .contact {
     max-width: 500px;
     margin: 0 auto;
   }
-  
+
   .contact input, .contact textarea {
     display: block;
     width: 100%;
@@ -275,12 +340,12 @@ body {
     -webkit-transition: .5s ease all;
     transition: .5s ease all;
   }
-  
+
   .contact textarea {
     height: 150px;
     resize: none;
   }
-  
+
   .contact button {
     display: block;
     width: 100%;
@@ -294,7 +359,7 @@ body {
     -webkit-transition: .5s ease all;
     transition: .5s ease all;
   }
-  
+
   .white-text {
     color: white;
   }
